WebContent/resources/css/global.css
body {
    padding-top: 50px;
    padding-bottom: 20px;
}

.nav a{
	color : white!important;
	font-size: 1.2em!important;
	font-weight: 700;
}

.navbar {
	background-color : pink;
}

.primary-btn {
	background-color : black;
	color : white;
}

.primary-btn:hover{
	color : white;
	font-weight: bold;
}

